--- a/book.bib
+++ b/book.bib
@@ -54,6 +54,16 @@
   year={2011},
   publisher={Springer Science \& Business Media}
 }
+@article{diaz2020causal,
+  title={Causal mediation analysis for stochastic interventions},
+  author={D{\'\i}az, Iv{\'a}n and Hejazi, Nima S},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume={82},
+  number={3},
+  pages={661--683},
+  year={2020},
+  publisher={Wiley Online Library}
+}
 
 @article{diaz2011super,
   title={Super learner based conditional density estimation with application to
@@ -774,6 +784,12 @@ year = "2014"
   publisher = {The Open Journal},
   doi = {10.21105/joss.00512},
   url = {https://doi.org/10.21105/joss.00512}
+}
+@article{hejazi2020nonparametric,
+  title={Nonparametric causal mediation analysis for stochastic interventional (in) direct effects},
+  author={Hejazi, Nima S and Rudolph, Kara E and van der Laan, Mark J and D{\'\i}az, Iv{\'a}n},
+  journal={arXiv preprint arXiv:2009.06203},
+  year={2020}
 }
 
 @article{coyle2021targeted,
