--- a/04-stochastic.Rmd
+++ b/04-stochastic.Rmd
@@ -106,15 +106,15 @@ There are two possible ways of defining stochastic effects:
     \delta = \frac{\text{odds}(A_\delta = 1\mid W=w)}
     {\text{odds}(A = 1\mid W=w)}
   \end{equation*}
-- This gives the intervention a nice interpretation as _what would happen in a
+- Interpretation: _what would happen in a
   world where the odds of receiving treatment is increased by $\delta$_
 - Let $Y_{A_\delta}$ denote the outcome in this hypothetical world
 
 #### Illustrative application for IPSIs
 
-- Consider the effect of participation in a sports team on children's BMI
-- Mediation through behavioral covariates such as snacking, exercising, etc.
-- Intervention: for each individual, increase the odds of participating in a sports team by $\delta=2$
+- Consider the effect of participation in sports on children's BMI
+- Mediation through snacking, exercising, etc.
+- Intervention: for each individual, increase the odds of participating in a sports by $\delta=2$
 - The post-intervention exposure is a draw $A_\delta$ from a Bernoulli distribution with probability $g_\delta(1\mid w)$
 
 ### Example: modified treatment policies (MTP) [@diaz2020causal] {-}
@@ -266,4 +266,5 @@ mean(direct)
 
 <!--
 ID: Should I add: continuous interventions, and/or the definitions of effects with intermediate confounders?
+KER: I don't think adding for intermediate confounders is necessary. Continuous interventions would be really useful *if* practical methods existed for that, but I think despite the paper existing, it hasn't really been done in practice, right? So probably wouldn't want to get into that.
 -->
